# book_app

./: pyproject.toml
bookproject/Autor/: forms.py  urls.py
bookproject/Autor/templates/Autor/: autor_main.html  book_main.html
bookproject/book/: forms.py  urls.py
